--- a/social-app/CrazyIndeed/GoogleService-Info.plist
+++ b/social-app/CrazyIndeed/GoogleService-Info.plist
@@ -7,21 +7,21 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>432060926940-j0dcici88to9vg7fvt6u7hr28cq886go.apps.googleusercontent.com</string>
+	<string>727624128089-067e1d93eru154d60u8dbef2nean9kad.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.432060926940-j0dcici88to9vg7fvt6u7hr28cq886go</string>
+	<string>com.googleusercontent.apps.727624128089-067e1d93eru154d60u8dbef2nean9kad</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBO9_muTA7IVn45JnROxmpspDLmsEP2e7Q</string>
+	<string>AIzaSyBRmOpcJyJBKWH-38DYxKsWkFX7npxaqjk</string>
 	<key>GCM_SENDER_ID</key>
-	<string>432060926940</string>
+	<string>727624128089</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>gabeAron.CrazyIndeed</string>
+	<string>swiftTeam.candidateBuilder</string>
 	<key>PROJECT_ID</key>
-	<string>crazyindeed-df7d1</string>
+	<string>candidate-builder</string>
 	<key>STORAGE_BUCKET</key>
-	<string>crazyindeed-df7d1.appspot.com</string>
+	<string>candidate-builder.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -33,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:432060926940:ios:9c1760cd42cf3849</string>
+	<string>1:727624128089:ios:d2f84cd4fd308099</string>
 	<key>DATABASE_URL</key>
-	<string>https://crazyindeed-df7d1.firebaseio.com</string>
+	<string>https://candidate-builder.firebaseio.com</string>
 </dict>
 </plist>
