--- a/social-app/CrazyIndeed/Info.plist
+++ b/social-app/CrazyIndeed/Info.plist
@@ -16,20 +16,22 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
-    <key>CFBundleURLTypes</key>
-    <array>
-        <dict>
-            <key>CFBundleURLSchemes</key>
-            <array>
-                <string>fb251065132009129</string>
-            </array>
-        </dict>
-    </array>
-    <key>FacebookAppID</key>
-    <string>251065132009129</string>
-    <key>FacebookDisplayName</key>
-    <string>Candidate builder</string>
-    <key>LSApplicationQueriesSchemes</key>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb251065132009129</string>
+			</array>
+		</dict>
+	</array>
+	<key>CFBundleVersion</key>
+	<string>1.0.0</string>
+	<key>FacebookAppID</key>
+	<string>251065132009129</string>
+	<key>FacebookDisplayName</key>
+	<string>Candidate builder</string>
+	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
 		<string>fb-messenger-api</string>
